# Aiice

./: .gitignore  .pdm-python  CONTRIBUTE.md  LICENSE  README.md  pyproject.toml
.doc/leaderboard/: leaderboard.html  table.csv
.github/workflows/: publish-doc.yml  publish-pkg.yml  publish.yml  test.yml
baseline_model/tests/: test_model.py
scripts/: README.md
scripts/debug/: main.py
scripts/examples/: end-to-end.ipynb  quickstart.ipynb
scripts/examples/modules/: loader.ipynb  metrics.ipynb  preprocess.ipynb  quickstart.ipynb  runner.ipynb
scripts/experiments/: baseline_repeat.py  cli.py  config.py  conv2d.py  conv3d.py  convert.py  convlstm.py  utils.py
scripts/experiments/configs/: conv2d.yaml  conv3d.yaml
src/aiice/: __init__.py  benchmark.py  constants.py  loader.py  metrics.py  preprocess.py  runner.py
src/aiice/core/: huggingface.py  utils.py
src/baseline_model/logger/: logger.py
src/baseline_model/model/: models.py
src/baseline_model/trainer/: trainer.py
src/baseline_model/visualize/: visualize.py
tests/: example_notebook.ipynb  test_loader.py  test_metrics.py  test_preprocess.py
tests/core/: test_huggingface.py  test_utils.py
